--- a/diagnosis/templates/diagnosis/diagnosis_detail.html
+++ b/diagnosis/templates/diagnosis/diagnosis_detail.html
@@ -25,7 +25,18 @@
             </form>
         </div>
         <div class="card mt-4 shadow-lg">
-        	<h4 class="card-header">Предполагаемые диагнозы</h4>
+        	<h4 class="card-header ">
+        	<div class="form-row pb-0 mb-0">
+                    <div class="form-group col-auto mr-auto pb-0 mb-0">
+                        Результаты диагностики
+                    </div>
+                    <div class="form-group col-auto pb-0 mb-0">
+						<a href="" class="btn btn-outline border">
+							<span><img src="https://img.icons8.com/material/24/000000/print.png"></span></a>
+					</div>
+                </div>
+            </h4>
+
         	<div class="card-body">
         		<div class="card-columns">
 					{% for result in results %}
